frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700&family=Exo+2:wght@400;500;600&display=swap');
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
}

:root {
--background: #0A0A14;
--grid: #12121f;

--foreground: rgba(235,235,220,0.8);
--muted-foreground: rgba(255,255,255,0.6);
--loading-text: rgba(255,255,255,0.4);
--ai-text: rgba(253, 255, 145, 0.85);

--border: #0052CC;
--caution: #d9c91f;
--danger: #E8001D;
--back: rgba(255, 255, 255, 0.7);

--popover: #0A0A14;
--popover-foreground: rgba(235,235,220,0.8);

--ring: rgba(255,255,255,0.3);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
    font-family: 'Exo 2', sans-serif;
  }
}

